refactor: Parser가 인스턴스 변수로 delimiter를 가지게 변경